# cats_and_dogs_bot

./: .gitignore  Makefile  README.md  pyproject.toml
telegram_bot/: main.py
telegram_bot/handlers/: help.py  quiz.py  random_cat.py  random_dog.py  start.py
telegram_bot/requests/: cat_image_and_fact.py  dog_image_and_fact.py
telegram_bot/utils/: token_reciever.py
